--- a/home/all.html
+++ b/home/all.html
@@ -17,9 +17,9 @@
     <script src="/static/jquery.pagination.js"></script>
     <div id="abox">
         <div class="atop">
+
         </div>
         <div class="amid">
-
             <div class="amid-left">
                 <div class="amid-left-top">
                     <div class="left-top-img">
@@ -57,7 +57,50 @@
             </div>
         </div>
         <div class="afoot">
-            dsadas
+
+        </div>
+        <!-- 隐藏区域 -->
+        <div id="bgaddar">
+            <div class="addar-index">
+                <div class="button-close-addar">关闭</div>
+                <div class="addar-head"><span>用文字来记录美好</span></div>
+                <div class="addar-mid">
+                    <div class="addar-mid-content">
+                        <div class="addar-mid-top">
+                            <div class="addar-mt-changet">选择分类</div>
+                            <div class="addar-mt-changeselt">
+                                <select name="" id="" class="addar-mt-changesel">
+                                    <option value="0">红袖添香1</option>
+                                    <option value="1">红袖添香2</option>
+                                    <option value="2">红袖添香3</option>
+                                    <option value="3">红袖添香4</option>
+                                    <option value="4">红袖添香5</option>
+                                    <option value="5">红袖添香6</option>
+                                </select>
+                            </div>
+
+                        </div>
+                        <div class="addar-mt-changepubs">
+                            <div class="addar-mt-changepub">是否发布</div>
+                            <div class="addar-mt-changepubsel">
+                                <span>直接发布<input type="radio" name="changepub" id="changepub" value="1"></span>
+                                <span>暂不发布<input type="radio" name="changepub" id="changepub" checked="checked" value="2"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="addar-mid-comment">
+                        <div class="addar-comment-texts">
+                            <textarea name="" id="addar-text-comments"></textarea>
+                        </div>
+
+                        <div class="addar-goComment">发表</div>
+
+                    </div>
+                </div>
+                <div class="addar-bottom">
+                </div>
+
+            </div>
         </div>
     </div>
 
