后台添加文章页面

--- a/home/all.html
+++ b/home/all.html
@@ -70,12 +70,12 @@
                             <div class="addar-mt-changet">选择分类</div>
                             <div class="addar-mt-changeselt">
                                 <select name="" id="" class="addar-mt-changesel">
-                                    <option value="0">红袖添香1</option>
+                                    <!-- <option value="0">红袖添香1</option>
                                     <option value="1">红袖添香2</option>
                                     <option value="2">红袖添香3</option>
                                     <option value="3">红袖添香4</option>
                                     <option value="4">红袖添香5</option>
-                                    <option value="5">红袖添香6</option>
+                                    <option value="5">红袖添香6</option> -->
                                 </select>
                             </div>
 
