--- a/home/all.html
+++ b/home/all.html
@@ -41,8 +41,8 @@
                         <p class="amid-p" val='0'>首页展示</p>
                         <p class="amid-p" val='1'>个人资料</p>
                         <p class="amid-p" val='2'>文章相关</p>
-                        <p class="amid-p" val='3'>图片相关</p>
-                        <p class="amid-p" val='4'>信息相关</p>
+                        <!-- <p class="amid-p" val='3'>图片相关</p>
+                        <p class="amid-p" val='4'>信息相关</p> -->
                     </div>
                     <div>
                         <p class="outshou">返回首页</p>
