--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <!-- 登录页面的背景以及内容相关显示 -->
     <div id="bgsub">
-        <div class="sub-index">
+        <!-- <div class="sub-index sub-index-sub"> -->
             <!-- <div class="button-close">关闭</div>
             <div class="sub-head">遇 见 过 往</div>
             <div class="sub-mid">
@@ -106,7 +106,7 @@
                 <p class="submitfog">忘记密码</p>
             </div> -->
 
-        </div>
+        <!-- </div> -->
     </div>
     <!-- 细节显示记忆评论点赞收藏等相关显示 -->
     <div id="bgdet">
